--- a/src/haskell/act.cabal
+++ b/src/haskell/act.cabal
@@ -22,5 +22,9 @@ executable act
   -- other-extensions:
   build-depends:       base   >=4.9 && <5,
                        aeson  >= 1.0,
+                       text   >= 1.2,
+                       array  >= 0.5.3.0,
+                       bytestring >= 0.10.8.2,
+                       
   -- hs-source-dirs:
   default-language:    Haskell2010
