--- a/src/haskell/act.cabal
+++ b/src/haskell/act.cabal
@@ -24,7 +24,8 @@ executable act
                        aeson  >= 1.0,
                        text   >= 1.2,
                        array  >= 0.5.3.0,
+                       vector >= 0.12.0.3,
                        bytestring >= 0.10.8.2,
-                       
+
   -- hs-source-dirs:
   default-language:    Haskell2010
