--- a/src/act.cabal
+++ b/src/act.cabal
@@ -12,7 +12,7 @@ author:              Martin Lundfall
 maintainer:          martin.lundfall@protonmail.com
 -- copyright:
 -- category:
-extra-source-files:  src/act.cf CHANGELOG.md
+extra-source-files:  act.cf
 
 executable act
   main-is:             Splitter.hs
@@ -24,6 +24,7 @@ executable act
                        aeson  >= 1.0,
                        text   >= 1.2,
                        array  >= 0.5.3.0,
+                       optparse-generic >= 1.3,
                        vector >= 0.12.0.3,
                        bytestring >= 0.10.8.2,
 
