--- a/src/act.cabal
+++ b/src/act.cabal
@@ -20,13 +20,14 @@ executable act
   other-modules: AbsAct LexAct ParAct ErrM
   -- other-extensions:
   build-tool-depends: happy:happy, alex:alex
-  build-depends:       base   >=4.9 && <5,
-                       aeson  >= 1.0,
-                       text   >= 1.2,
-                       array  >= 0.5.3.0,
+  build-depends:       base             >=4.9 && <5,
+                       aeson            >= 1.0,
+                       containers       >= 0.5,
+                       text             >= 1.2,
+                       array            >= 0.5.3.0,
                        optparse-generic >= 1.3,
-                       vector >= 0.12.0.3,
-                       bytestring >= 0.10.8.2,
+                       vector           >= 0.12.0.3,
+                       bytestring       >= 0.10.8.2,
 
   hs-source-dirs: . ./parser
   default-language:    Haskell2010
