more parsing (wip)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-main: lex.hs parse.hs
-	ghc -o main parse.hs lex.hs
+main: lex.hs parse.hs syntax.hs
+	ghc -o main syntax.hs parse.hs lex.hs 
 
 parse.hs: parse.y
 	happy parse.y
@@ -9,4 +9,4 @@ lex.hs: lex.x
 
 .PHONY: clean
 clean:
-	rm -f *.hi *.o lex.hs parse.hs
+	rm -f *.hi *.o lex.hs parse.hs main
