--- a/src/act.cabal
+++ b/src/act.cabal
@@ -24,11 +24,13 @@ executable act
   build-depends:       base             >=4.9 && <5,
                        aeson            >= 1.0,
                        containers       >= 0.5,
+                       hevm             >= 0.37,
                        text             >= 1.2,
                        array            >= 0.5.3.0,
                        optparse-generic >= 1.3,
                        vector           >= 0.12.0.3,
                        bytestring       >= 0.10.8.2,
+                       sbv              >= 8.4
 
   hs-source-dirs: . ./parser
   default-language:    Haskell2010
