--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-main: lex.hs parse.hs syntax.hs
-	ghc -o main syntax.hs parse.hs lex.hs 
+main: lex.hs parse.hs Syntax.hs
+	ghc -o main Syntax.hs parse.hs lex.hs 
 
 parse.hs: parse.y
 	happy parse.y
