--- a/src/act.cabal
+++ b/src/act.cabal
@@ -28,6 +28,7 @@ executable act
                        optparse-generic >= 1.3,
                        vector           >= 0.12.0.3,
                        bytestring       >= 0.10.8.2,
+                       uniplate         >= 1.6.12,
                        sbv              >= 8.4,
                        mtl              >= 2.2.2
 
