Pretty Printer and Frontend Fuzzing
Adds a pretty printer and QuickCheck generators for the typechecked AST.

Both are used in combination to challenge the invariant that:

    type . parse . lex . print (AST) == AST

--- a/src/hie.yaml
+++ b/src/hie.yaml
@@ -1,3 +1,6 @@
 cradle:
   cabal:
-    component: "exe:act"
+    - path: "."
+      component: "exe:act"
+    - path: "./test"
+      component: "test:test"
