--- a/src/act.cabal
+++ b/src/act.cabal
@@ -5,32 +5,35 @@ version:              0.1.0.0
 author:               Martin Lundfall
 maintainer:           martin.lundfall@protonmail.com
 
-executable act
-  main-is:            Main.hs
-  other-modules:      Lex ErrM Parse RefinedAst K Syntax Type Prove Print
-  ghc-options:        -Wall -Wno-deprecations
-  build-tool-depends: happy:happy, alex:alex
-  build-depends:      base             >=4.9 && <5,
-                      aeson            >= 1.0,
-                      containers       >= 0.5,
-                      hevm             >= 0.37,
-                      text             >= 1.2,
-                      array            >= 0.5.3.0,
-                      optparse-generic >= 1.3,
-                      vector           >= 0.12.0.3,
-                      bytestring       >= 0.10.8,
-                      sbv              >= 8.4,
-                      mtl              >= 2.2.2,
-                      utf8-string      >= 1.0.1.1
+common deps
+  build-depends: base             >=4.9 && <5,
+                 aeson            >= 1.0,
+                 containers       >= 0.5,
+                 hevm             >= 0.37,
+                 text             >= 1.2,
+                 array            >= 0.5.3.0,
+                 optparse-generic >= 1.3,
+                 vector           >= 0.12.0.3,
+                 bytestring       >= 0.10.8,
+                 sbv              >= 8.4,
+                 mtl              >= 2.2.2,
+                 utf8-string      >= 1.0.1.1
+  ghc-options:   -Wall -Wno-deprecations
+  other-modules: Lex ErrM Parse RefinedAst K Syntax Type Prove Print
 
-  hs-source-dirs: .
+executable act
+  import:             deps
+  main-is:            Main.hs
+  build-tool-depends: happy:happy, alex:alex
+  hs-source-dirs:     .
   default-language:   Haskell2010
 
 Test-Suite test
+  import:             deps
   type:               exitcode-stdio-1.0
+  default-language:   Haskell2010
   main-is:            Test.hs
-  hs-source-dirs:     test
-  build-depends:      base >= 4.9 && < 5,
-                      HUnit >= 1.6,
+  hs-source-dirs:     test, .
+  build-depends:      HUnit >= 1.6,
                       tasty >= 1.0,
-                      tasty-hunit >= 0.10,
+                      tasty-hunit >= 0.10
