--- a/src/act.cabal
+++ b/src/act.cabal
@@ -19,7 +19,7 @@ common deps
                  mtl              >= 2.2.2,
                  utf8-string      >= 1.0.1.1
   ghc-options:   -Wall -Wno-deprecations
-  other-modules: Lex ErrM Parse RefinedAst K Coq Syntax Type Prove Print
+  other-modules: Lex ErrM Parse RefinedAst K Coq Syntax Type Prove Print Enrich
 
 executable act
   import:             deps
