--- a/src/act.cabal
+++ b/src/act.cabal
@@ -10,6 +10,7 @@ common deps
                  aeson            >= 1.0,
                  containers       >= 0.5,
                  hevm             >= 0.37,
+                 lens             >= 4.17.1,
                  text             >= 1.2,
                  array            >= 0.5.3.0,
                  optparse-generic >= 1.3,
