--- a/src/act.cabal
+++ b/src/act.cabal
@@ -18,9 +18,24 @@ common deps
                  bytestring       >= 0.10.8,
                  sbv              >= 8.4,
                  mtl              >= 2.2.2,
+                 tasty-quickcheck     >= 0.10,
+                 generic-random >= 1.3.0.1,
                  utf8-string      >= 1.0.1.1
   ghc-options:   -Wall -Wno-deprecations
-  other-modules: Lex ErrM Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich
+  other-modules:
+    Lex
+    ErrM
+    Parse
+    RefinedAst
+    K
+    HEVM
+    Coq
+    Syntax
+    Type
+    Prove
+    Print
+    Enrich
+    Yul
 
 executable act
   import:             deps
