--- a/src/act.cabal
+++ b/src/act.cabal
@@ -14,6 +14,10 @@ common deps
                  text             >= 1.2,
                  array            >= 0.5.3.0,
                  optparse-generic >= 1.3,
+                 operational      >= 0.2.3 && < 0.3,
+                 transformers,
+                 capability,
+                 primitive,
                  vector           >= 0.12.0.3,
                  bytestring       >= 0.10.8,
                  sbv              >= 8.4,
@@ -36,6 +40,7 @@ common deps
     Print
     Enrich
     Yul
+    YulEdsl
 
 executable act
   import:             deps
