Coq: hlint suggestions

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -1,3 +1,4 @@
 - ignore: {name: Redundant bracket}
 - ignore: {name: Use head}
 - ignore: {name: Move brackets to avoid $}
+- ignore: {name: Use ++}
