Refactor: Enrich Invariants
Two major changes:

- Pull logic for adding constraints on the size of variables referenced
  by the invariant expressions into Enrich.hs
- Add a new module (Extract) that contains all logic used to extract
  information from the AST

This also fixes a bug where type bounds for calldata / env vars
referenced in the invariant were missing.

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -20,7 +20,7 @@ common deps
                  mtl              >= 2.2.2,
                  utf8-string      >= 1.0.1.1
   ghc-options:   -Wall -Wno-deprecations
-  other-modules: Lex ErrM Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich
+  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich
 
 executable act
   import:             deps
