test: add test for well typedness of smt expressions

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -48,4 +48,5 @@ Test-Suite test
                     quickcheck-instances >= 0.3,
                     tasty-hunit          >= 0.10,
                     tasty-quickcheck     >= 0.10,
+                    QuickCheck           >= 2.13.2,
                     tasty                >= 1.2
