adapt Exp instances and implement TH for smart constructors

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -25,7 +25,8 @@ common deps
                  mtl              >= 2.2.2,
                  utf8-string      >= 1.0.1.1,
                  natural-transformation >= 0.4,
-  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich Utils
+                 template-haskell >= 2.14,
+  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich Utils TH
 
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans
