use compdata instead of homecooked higher order recursion schemes

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -24,9 +24,9 @@ common deps
                  sbv              >= 8.4,
                  mtl              >= 2.2.2,
                  utf8-string      >= 1.0.1.1,
-                 natural-transformation >= 0.4,
                  template-haskell >= 2.14,
-  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich Utils TH
+                 compdata         >= 0.12.1,
+  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich Utils
 
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans
