singleton types work; lets us remove several ugly `(>>=?)`

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -28,7 +28,9 @@ common deps
                  ansi-wl-pprint   >= 0.6.9,
                  regex-tdfa,
                  validation       >= 1.1.1,
-                 semigroupoids    >= 5.2.2
+                 semigroupoids    >= 5.2.2,
+                 extra,
+                 singletons
   other-modules: Lex ErrM ErrorLogger Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Annotated Syntax.Timing Syntax.TimeAgnostic Type Print Enrich SMT
   
   if flag(ci)
