--- a/src/act.cabal
+++ b/src/act.cabal
@@ -30,8 +30,9 @@ common deps
                  validation       >= 1.1.1,
                  semigroupoids    >= 5.2.2,
                  extra,
-                 singletons
-  other-modules: Lex ErrM ErrorLogger Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Annotated Syntax.Timing Syntax.TimeAgnostic Type Print Enrich SMT
+                 singletons,
+                 reflection       >= 2.1.6
+  other-modules: Lex ErrM Error Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Annotated Syntax.Timing Syntax.TimeAgnostic Type Print Enrich SMT
   
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
