--- a/src/act.cabal
+++ b/src/act.cabal
@@ -32,10 +32,8 @@ common deps
                  ansi-wl-pprint   >= 0.6.9,
                  regex-tdfa,
                  validation       >= 1.1.1,
-                 semigroupoids    >= 5.2.2,
                  extra,
-                 singletons,
-                 reflection       >= 2.1.6
+                 singletons
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
   else
