ci: simplify docs deploy

--- a/.github/workflows/deploy-book.yaml
+++ b/.github/workflows/deploy-book.yaml
@@ -1,39 +1,23 @@
-name: Deploy
+name: Deploy Book
 on:
   push:
     branches:
       - master
-
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: cachix/install-nix-action@ef6c38c42ba153b4be4b764b71c87c1610896378 # v15
-      with:
-        skip_adding_nixpkgs_channel: false
-    - uses: cachix/cachix-action@3db1a09d3a573d7b62801116405ad5aa0f59c904 # v10
-      with:
-        name: dapp
-        skipPush: true
-        signingKey: ''
-    # https://github.com/rust-lang/mdBook/wiki/Automated-Deployment%3A-GitHub-Actions#github-pages-deploy
-    - name: Deploy GitHub Pages
-      run: |
-        nix-shell
-        cd doc
+      - uses: actions/checkout@v2
+      - uses: cachix/install-nix-action@v12
+      - uses: cachix/cachix-action@v8
+        with:
+          name: dapp
 
-        mdbook build
-        git worktree add gh-pages gh-pages
-        git config user.name "Deploy from CI"
-        git config user.email ""
-        cd gh-pages
-        # Delete the ref to avoid keeping history.
-        git update-ref -d refs/heads/gh-pages
-        rm -rf *
-        mv ../book/* .
-        git add .
-        git commit -m "Deploy $GITHUB_SHA to gh-pages"
-        git push --force
+      - name: build docs
+        run: nix-shell --pure --command "make docs"
+
+      - name: publish docs
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: doc/book
