--- a/act.cabal
+++ b/act.cabal
@@ -43,7 +43,7 @@ common deps
 library act-internal
   import:             deps
   build-tool-depends: happy:happy, alex:alex
-  hs-source-dirs:     .
+  hs-source-dirs:     ./src
   default-language:   Haskell2010
   exposed-modules:    CLI Error Print SMT Syntax.Annotated
   other-modules:      Lex Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Syntax.TimeAgnostic Type Enrich Eval
