--- a/src/act.cabal
+++ b/src/act.cabal
@@ -14,7 +14,7 @@ common deps
   build-depends: base               >= 4.9 && < 5,
                  aeson              >= 1.0,
                  containers         >= 0.5,
-                 hevm               >= 0.47.1 && < 0.48,
+                 hevm               ,
                  -- hevm version has an ugly upper bound to
                  -- force usage of version from nix-shell,
                  -- which avoids weird missing deps when
@@ -25,7 +25,6 @@ common deps
                  optparse-generic   >= 1.3,
                  vector             >= 0.12.0.3,
                  bytestring         >= 0.10.8,
-                 sbv                >= 8.4,
                  mtl                >= 2.2.2,
                  utf8-string        >= 1.0.1.1,
                  process            >= 1.6.5.0,
