--- a/src/act.cabal
+++ b/src/act.cabal
@@ -11,27 +11,28 @@ flag ci
     manual:      True
 
 common deps
-  build-depends: base             >= 4.9 && < 5,
-                 aeson            >= 1.0,
-                 containers       >= 0.5,
-                 hevm             >= 0.47.1 && < 0.48,
+  build-depends: base               >= 4.9 && < 5,
+                 aeson              >= 1.0,
+                 containers         >= 0.5,
+                 hevm               >= 0.47.1 && < 0.48,
                  -- hevm version has an ugly upper bound to
                  -- force usage of version from nix-shell,
                  -- which avoids weird missing deps when
                  -- pulling it from hackage.
-                 lens             >= 4.17.1,
-                 text             >= 1.2,
-                 array            >= 0.5.3.0,
-                 optparse-generic >= 1.3,
-                 vector           >= 0.12.0.3,
-                 bytestring       >= 0.10.8,
-                 sbv              >= 8.4,
-                 mtl              >= 2.2.2,
-                 utf8-string      >= 1.0.1.1,
-                 process          >= 1.6.5.0,
-                 ansi-wl-pprint   >= 0.6.9,
+                 lens               >= 4.17.1,
+                 text               >= 1.2,
+                 array              >= 0.5.3.0,
+                 optparse-generic   >= 1.3,
+                 vector             >= 0.12.0.3,
+                 bytestring         >= 0.10.8,
+                 sbv                >= 8.4,
+                 mtl                >= 2.2.2,
+                 utf8-string        >= 1.0.1.1,
+                 process            >= 1.6.5.0,
+                 ansi-wl-pprint     >= 0.6.9,
                  regex-tdfa,
-                 validation       >= 1.1.1,
+                 validation         >= 1.1.1,
+                 ordered-containers >= 0.2.2,
                  extra,
                  singletons,
                  deriving-compat
