--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           skipPush: true
           signingKey: ''
       - name: test
-        run: nix develop --pure --command "cabal new-update && make test"
+        run: nix shell --ignore-environment --command "cabal new-update && make test"
       - name: build
         run: nix build -A act
 
