--- a/src/act.cabal
+++ b/src/act.cabal
@@ -40,7 +40,7 @@ common deps
   else
       ghc-options: -Wall -Wno-orphans -Wno-unticked-promoted-constructors
 
-library act-internal
+library
   import:             deps
   build-tool-depends: happy:happy, alex:alex
   hs-source-dirs:     .
@@ -53,7 +53,7 @@ executable act
   main-is:            Main.hs
   hs-source-dirs:     main
   default-language:   Haskell2010
-  build-depends:      act-internal
+  build-depends:      act
 
 Test-Suite test
   import:           deps
@@ -61,7 +61,7 @@ Test-Suite test
   default-language: Haskell2010
   main-is:          Test.hs
   hs-source-dirs:   test
-  build-depends:    act-internal,
+  build-depends:    act,
                     pretty-simple          >= 2.2,
                     quickcheck-instances   >= 0.3,
                     quickcheck-transformer >= 0.3,
