--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           name: dapp
           skipPush: true
           signingKey: ''
-      - name: test
-        run: nix develop --ignore-environment --command bash -c "cabal new-update && make test"
       - name: build
         run: nix build .#act
+      - name: test
+        run: nix shell --command make test-ci
