cabal: pin new version of hevm

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -32,6 +32,7 @@ common deps
                  singletons,
                  deriving-compat,
                  async              >= 2.2.4,
+                 data-dword         >= 0.3.2.1,
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
   else
