--- a/src/act.cabal
+++ b/src/act.cabal
@@ -15,10 +15,6 @@ common deps
                  aeson              >= 1.0,
                  containers         >= 0.5,
                  hevm               ,
-                 -- hevm version has an ugly upper bound to
-                 -- force usage of version from nix-shell,
-                 -- which avoids weird missing deps when
-                 -- pulling it from hackage.
                  lens               >= 4.17.1,
                  text               >= 1.2,
                  array              >= 0.5.3.0,
@@ -46,7 +42,7 @@ library
   hs-source-dirs:     .
   default-language:   Haskell2010
   exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic
-  other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev
+  other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM
 
 executable act
   import:             deps
