--- a/src/act.cabal
+++ b/src/act.cabal
@@ -52,6 +52,8 @@ executable act
   hs-source-dirs:     main
   default-language:   Haskell2010
   build-depends:      act
+  if os(darwin)
+      extra-libraries: c++
 
 Test-Suite test
   import:           deps
