cabal: cpp lib fix

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -69,3 +69,5 @@ Test-Suite test
                     tasty-quickcheck       >= 0.10,
                     QuickCheck             >= 2.13.2,
                     tasty                  >= 1.2
+  if os(darwin)
+      extra-libraries: c++
