--- a/src/act.cabal
+++ b/src/act.cabal
@@ -15,10 +15,6 @@ common deps
                  aeson              >= 1.0,
                  containers         >= 0.5,
                  hevm               ,
-                 -- hevm version has an ugly upper bound to
-                 -- force usage of version from nix-shell,
-                 -- which avoids weird missing deps when
-                 -- pulling it from hackage.
                  lens               >= 4.17.1,
                  text               >= 1.2,
                  array              >= 0.5.3.0,
@@ -34,7 +30,9 @@ common deps
                  ordered-containers >= 0.2.2,
                  extra,
                  singletons,
-                 deriving-compat
+                 deriving-compat,
+                 async              >= 2.2.4,
+                 data-dword         >= 0.3.2.1,
   if flag(ci)
       ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
   else
@@ -46,7 +44,7 @@ library
   hs-source-dirs:     .
   default-language:   Haskell2010
   exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic
-  other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev
+  other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM
 
 executable act
   import:             deps
@@ -54,6 +52,8 @@ executable act
   hs-source-dirs:     main
   default-language:   Haskell2010
   build-depends:      act
+  if os(darwin)
+      extra-libraries: c++
 
 Test-Suite test
   import:           deps
@@ -69,3 +69,5 @@ Test-Suite test
                     tasty-quickcheck       >= 0.10,
                     QuickCheck             >= 2.13.2,
                     tasty                  >= 1.2
+  if os(darwin)
+      extra-libraries: c++
