--- a/src/act.cabal
+++ b/src/act.cabal
@@ -14,7 +14,7 @@ common deps
   build-depends: base               >= 4.9 && < 5,
                  aeson              >= 1.0,
                  containers         >= 0.5,
-                 hevm               ,
+                 hevm               >= 0.51.4,
                  lens               >= 4.17.1,
                  text               >= 1.2,
                  array              >= 0.5.3.0,
@@ -43,7 +43,14 @@ library
   build-tool-depends: happy:happy, alex:alex
   hs-source-dirs:     .
   default-language:   Haskell2010
-  exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic
+  default-extensions:
+    ImportQualifiedPost
+    LambdaCase
+    OverloadedLabels
+    DataKinds
+    GADTs
+
+  exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic Decompile
   other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM Consistency
 
 executable act
