Syntax: remove constant

--- a/src/act.cabal
+++ b/src/act.cabal
@@ -44,7 +44,7 @@ library
   hs-source-dirs:     .
   default-language:   Haskell2010
   exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic
-  other-modules:      Lex Parse K Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM Consistency
+  other-modules:      Lex Parse Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM Consistency
 
 executable act
   import:             deps
