--- a/act.cabal
+++ b/act.cabal
@@ -11,6 +11,8 @@ flag ci
     manual:      True
 
 common deps
+  default-extensions:
+    ImportQualifiedPost
   build-depends: base               >= 4.9 && < 5,
                  aeson              >= 1.0,
                  containers         >= 0.5,
@@ -41,15 +43,33 @@ common deps
 library
   import:             deps
   build-tool-depends: happy:happy, alex:alex
-  hs-source-dirs:     .
+  hs-source-dirs:     src
   default-language:   Haskell2010
-  exposed-modules:    CLI Error Print SMT Syntax.Annotated Syntax.TimeAgnostic
-  other-modules:      Lex Parse Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Type Enrich Dev HEVM Consistency
+  exposed-modules:
+    Act.CLI
+    Act.Error
+    Act.Print
+    Act.SMT
+    Act.Syntax.Annotated
+    Act.Syntax.TimeAgnostic
+    Act.Lex
+    Act.Parse
+    Act.Coq
+    Act.Syntax
+    Act.Syntax.Untyped
+    Act.Syntax.Typed
+    Act.Syntax.Types
+    Act.Syntax.Timing
+    Act.Type
+    Act.Enrich
+    Act.Dev
+    Act.HEVM
+    Act.Consistency
 
 executable act
   import:             deps
   main-is:            Main.hs
-  hs-source-dirs:     main
+  hs-source-dirs:     src/CLI
   default-language:   Haskell2010
   build-depends:      act
   if os(darwin)
@@ -59,8 +79,8 @@ Test-Suite test
   import:           deps
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  main-is:          Test.hs
-  hs-source-dirs:   test
+  main-is:          Main.hs
+  hs-source-dirs:   src/Test
   build-depends:    act,
                     pretty-simple          >= 2.2,
                     quickcheck-instances   >= 0.3,
