--- a/hie.yaml
+++ b/hie.yaml
@@ -4,5 +4,5 @@ cradle:
       component: "lib:act"
     - path: "src/CLI"
       component: "exe:act"
-    - path: "src/test"
+    - path: "src/Test"
       component: "test:test"
