--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
       - name: test
         run: nix develop --ignore-environment --command bash -c "cabal update && make test-ci"
       - name: build
-        run: nix build .#act
+        run: nix build -L .#act
