Bounds: rename enrich to bounds; add integer range bounds of updates in postconditions; some small fixes in generated bounds

--- a/act.cabal
+++ b/act.cabal
@@ -70,7 +70,7 @@ library
     Act.Syntax.Timing
     Act.Traversals
     Act.Type
-    Act.Enrich
+    Act.Bounds
     Act.Dev
     Act.HEVM
     Act.HEVM_utils
