--- a/tests/coq/ERC20/Makefile
+++ b/tests/coq/ERC20/Makefile
@@ -11,5 +11,5 @@ CoqMakefile: _CoqProject
 .PHONY: clean
 clean:
 	if [[ -f CoqMakefile ]]; then make -f CoqMakefile clean; fi
-	rm -f StateMachine.v CoqMakefile CoqMakefile.conf
+	rm -f ERC20.v CoqMakefile CoqMakefile.conf
 	rm -f *.glob *.vo *.vok *.vos
